postgres用のdockerを設定

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,17 @@
 # https://www.playframework.com/documentation/latest/Configuration
+
+slick.dbs.default {
+  dataSourceClass = org.postgresql.ds.PGSimpleDataSource
+  profile = "slick.jdbc.PostgresProfile$"
+  db {
+    numThreads = 5
+    maxConnections = 5
+    url = "jdbc:postgresql://localhost:5432/play-sandbox"
+    databaseName = "play-sandbox"
+    user = "postgres"
+    password = ${DbPass}
+    driver = org.postgresql.Driver
+  }
+}
+
+play.http.secret.key="changeme"
