--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,12 +6,16 @@ slick.dbs.default {
   db {
     numThreads = 5
     maxConnections = 5
-    url = "jdbc:postgresql://localhost:5432/play-sandbox"
-    databaseName = "play-sandbox"
+    url = "jdbc:postgresql://localhost:5432/play_sandbox"
+    databaseName = "play_sandbox"
     user = "postgres"
     password = ${DbPass}
     driver = org.postgresql.Driver
   }
 }
 
+play.evolutions.db.default.autoApply=true // dev/productionで自動でupを適用、dev modeで自動でdownを適用
+play.evolutions.db.default.autoApplyDowns=true // production modeで自動でdownを適用する
+
 play.http.secret.key="changeme"
+
