user controllerでswaggerを表示させる様に変更

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,5 +17,7 @@ slick.dbs.default {
 play.evolutions.db.default.autoApply=true // dev/productionで自動でupを適用、dev modeで自動でdownを適用
 play.evolutions.db.default.autoApplyDowns=true // production modeで自動でdownを適用する
 
+play.modules.enabled += "play.modules.swagger.SwaggerModule" // swagger-playの設定
+
 play.http.secret.key="changeme"
 
